# Movie-Recommender

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  docker-compose-jupyter.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
Notebooks/: netflix-data-preprocessing.ipynb  requirements.txt
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/src/: app.py  dbl_connect.py  main.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  AuthContext.jsx  form.js  formscript.css  formscript.js  formscript.jsx  login.css  login.js  login.jsx  register.jsx  result.css  result.js  result.jsx  test.js
movie-ui/: package-lock.json  package.json
movie-ui/src/: form.js  test.js
notebook/: movies-and-netflix-preprocessing.ipynb  movies-data-preprocessing.ipynb  movies-data-processing.ipynb  movies_and_netflix_preprocessing.ipynb  netflix-data-preprocessing.ipynb  requirements.txt  upload_to_db.ipynb
notebook_data_analysis/: Dockerfile  movies_and_netflix_preprocessing.ipynb  netflix_data_preprocessing.ipynb  requirements.txt  upload_to_db.ipynb
